<resources>
    <string name="app_name">Life Manager</string>
    <string-array name="categories">
        <item>Finances</item>
        <item>Studies</item>
        <item>Tasks</item>
    </string-array>
    <string name="title_syncro_icon">Syncro</string>
    <string name="title_settings_icon">Settings</string>
    <string name="greeting_morning">Good morning,\u0020</string>
    <string name="greeting_afternoon">Good afternoon,\u0020</string>
    <string name="greeting_evening">Good evening,\u0020</string>
    <string name="title_appbar_settings">Settings</string>
    <string name="hint_setting_input_username">Define username</string>
    <string name="text_save_settings_button">Save settings</string>
    <string-array name="categories_study">
        <item>Back-end</item>
        <item>Front-end</item>
        <item>Mobile</item>
        <item>Data Science</item>
        <item>DevOps</item>
        <item>General Programming</item>
        <item>Languages</item>
        <item>Other</item>
    </string-array>
    <string-array name="sector_finance">
        <item>Food</item>
        <item>Trips</item>
        <item>Transport</item>
        <item>Housing</item>
        <item>Other</item>
    </string-array>
    <string name="title_appbar_task_form">Add task</string>
    <string name="title_appbar_studies_form">Add study</string>
    <string name="title_appbar_finance_form">Add finance</string>
    <string name="form_name_hint">Name</string>
    <string name="form_link_course_hint">Link of the course</string>
    <string name="form_position_hint">Position</string>
    <string name="form_date_hint"><b>Date: touch to pick a date</b></string>
    <string name="form_date_label">Date:</string>
    <string name="form_value_hint">Value</string>
    <string name="form_subject_hint">Subject</string>
    <string name="form_description_hint">Description</string>
    <string name="form_deadline_hint"><b>Deadline: touch to pick a date</b></string>
    <string name="form_deadline_label">Deadline:</string>
    <string name="form_due_date_hint"><b>Due date: touch to pick a date</b></string>
    <string name="form_due_date_label">Due date:</string>
    <string name="form_status_label">Status</string>
    <string name="form_status_radio_button_concluded">Concluded</string>
    <string name="form_status_radio_button_pending">Pending</string>
    <string name="form_priority_label">Priority</string>
    <string name="form_priority_radio_button_high">High</string>
    <string name="form_priority_radio_button_medium">Medium</string>
    <string name="form_priority_radio_button_low">Low</string>
    <string name="form_category_label">Category</string>
    <string name="form_sector_label">Sector</string>
    <string name="form_type_label">Type</string>
    <string name="form_type_radio_button_income">Income</string>
    <string name="form_type_radio_button_expense">Expense</string>
    <string name="title_appbar_details_finance">Finance details</string>
    <string name="title_appbar_details_study">Study details</string>
    <string name="title_appbar_details_task">Task details</string>
    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string name="context_menu_update_option">Update</string>
    <string name="context_menu_delete_option">Delete</string>
    <string name="enable_explicative_messages">Enable explicative messages</string>
    <string name="disable_explicative_messages">Disable explicative messages</string>
    <string name="explicative_messages_label">Explicative messages</string>
    <string name="add_task_toast_message">Task successfully added</string>
    <string name="update_task_toast_message">Task successfully updated</string>
    <string name="delete_task_toast_message">Task successfully deleted</string>
    <string name="add_study_toast_message">Study successfully added</string>
    <string name="update_study_toast_message">Study successfully updated</string>
    <string name="delete_study_toast_message">Study successfully deleted</string>
    <string name="add_finance_toast_message">Finance successfully added</string>
    <string name="update_finance_toast_message">Finance successfully updated</string>
    <string name="delete_finance_toast_message">Finance successfully deleted</string>
    <string name="deletion_dialog_title">Confirm deletion</string>
    <string name="deletion_dialog_message">The item will be permanently deleted. Confirm ?</string>
    <string name="deletion_dialog_yes">Yes</string>
    <string name="deletion_dialog_no">No</string>
    <string name="settings_dialog_title">Initial set up</string>
    <string name="settings_dialog_message">It seems that this is the first time that you launch the
        app. There are some personal settings that you need to do to use all the functionalities available
        and to customize the app. Would you like to do it now ? (You can do it at any time in the settings
        area accessible by clicking on the cog icon in the bar on the top of the screen)</string>
    <string name="settings_dialog_yes">Do it now</string>
    <string name="settings_dialog_no">Not now</string>
    <string name="label_currency_type">Currency:</string>
    <string-array name="currency_types">
        <item>Euro</item>
        <item>Dollar</item>
    </string-array>
    <string name="app_creator">Developed by Humberto Borges</string>
</resources>