<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:id="@+id/studies_form_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:textSize="18sp"
        android:hint="@string/form_name_hint"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="5dp"/>

    <EditText
        android:id="@+id/studies_form_link_course"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:textSize="18sp"
        android:hint="@string/form_link_course_hint"
        app:layout_constraintTop_toBottomOf="@id/studies_form_name"
        app:layout_constraintStart_toStartOf="@id/studies_form_name"
        app:layout_constraintEnd_toEndOf="@id/studies_form_name"
        android:layout_marginVertical="5dp"/>

    <EditText
        android:id="@+id/studies_form_position"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:textSize="18sp"
        android:hint="@string/form_position_hint"
        app:layout_constraintTop_toBottomOf="@id/studies_form_link_course"
        app:layout_constraintStart_toStartOf="@id/studies_form_name"
        app:layout_constraintEnd_toEndOf="@id/studies_form_name"
        android:layout_marginVertical="5dp"/>

    <TextView
        android:id="@+id/studies_form_status_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/studies_form_position"
        app:layout_constraintStart_toStartOf="@id/studies_form_name"
        app:layout_constraintEnd_toEndOf="@id/studies_form_name"
        app:layout_constraintHorizontal_bias="0.0"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/form_status_label"/>

    <RadioGroup
        android:id="@+id/studies_form_status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/studies_form_status_label"
        app:layout_constraintStart_toStartOf="@id/studies_form_name"
        app:layout_constraintEnd_toEndOf="@id/studies_form_name"
        android:layout_marginVertical="5dp">

        <RadioButton
            android:id="@+id/studies_form_status_concluded"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:textSize="18sp"
            android:text="@string/form_status_radio_button_concluded"/>

        <RadioButton
            android:id="@+id/studies_form_status_pending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:textSize="18sp"
            android:text="@string/form_status_radio_button_pending"/>

    </RadioGroup>

    <TextView
        android:id="@+id/studies_form_category_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/studies_form_status"
        app:layout_constraintStart_toStartOf="@id/studies_form_name"
        app:layout_constraintEnd_toEndOf="@id/studies_form_name"
        app:layout_constraintHorizontal_bias="0.0"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/form_category_label"/>

    <Spinner
        android:id="@+id/studies_form_category"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/border_spinner"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/studies_form_category_label"
        app:layout_constraintStart_toStartOf="@id/studies_form_name"
        app:layout_constraintEnd_toEndOf="@id/studies_form_name"
        android:paddingVertical="7dp"
        android:layout_marginVertical="5dp"/>

    <Button
        android:id="@+id/studies_form_button_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/title_appbar_studies_form"
        android:backgroundTint="@color/color_studies_item"
        app:layout_constraintTop_toBottomOf="@id/studies_form_category"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginVertical="15dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>