<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AppSettingsActivity">

    <EditText
        android:id="@+id/input_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:textSize="18sp"
        android:hint="@string/hint_setting_input_username"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="5dp" />

    <CheckBox
        android:id="@+id/enable_toasts"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/enable_explicative_messages"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/input_username"
        app:layout_constraintStart_toStartOf="@id/input_username"
        app:layout_constraintEnd_toEndOf="@id/input_username"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginVertical="5dp"/>

    <Button
        android:id="@+id/button_save_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/text_save_settings_button"
        app:layout_constraintTop_toBottomOf="@id/enable_toasts"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="15dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>